--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stackblitz-starters-vhgjzh",
   "version": "0.0.0",
   "private": true,
+  "homepage": "http://s24576.github.io/1",
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -10,9 +11,24 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
